# Synthetic-Art-CNN

./: .flake8  .gitignore  .pre-commit-config.yaml  COMMITS_GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
interface/: app.py
notebooks/: 1.0-Data_Exploration.ipynb  2.0-Model_Training.ipynb  3.0-Model-Testing.ipynb
services/: app.py
src/: classify.py  dataset.py  loaders.py  logger_config.py  model.py  preprocess.py  train.py  transforms.py
