[project]
name = "synthetic-art-cnn"
version = "0.1.0"
description = ""
authors = [
    {name = "Ordinary33",email = "husnie.baddie@g.msuiit.edu.ph"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gradio (>=6.5.1,<7.0.0)",
    "fastapi (>=0.128.7,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "wandb (>=0.25.0,<0.26.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "onnx (>=1.20.1,<2.0.0)",
    "onnxscript (>=0.6.2,<0.7.0)",
    "onnxruntime-gpu (>=1.24.2,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pillow (>=12.1.1,<13.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "nbstripout (>=0.9.0,<0.10.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "notebook (>=7.5.3,<8.0.0)"
]

[[tool.poetry.source]]
name = "pytorch_cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_cu126"}
torchvision = {source = "pytorch_cu126"}
